Fixed bug where survey-minimap div was covering buttons

--- a/client/src/components/Minimap.css
+++ b/client/src/components/Minimap.css
@@ -5,7 +5,7 @@
     margin-left: 475px;
     margin-top: 0px;
     padding-right: 50px;
-    z-index: 2;
+    z-index: 1;
 }
 
 .reticle {
@@ -16,5 +16,5 @@
     position: absolute;
     margin-left: 720px;
     margin-top: 245px;
-    z-index: 3;
+    z-index: 2;
 }
