--- a/client/src/components/Survey.css
+++ b/client/src/components/Survey.css
@@ -174,6 +174,11 @@
   width: 90vw;
 }
 
+.survey-map {
+  position: absolute;
+  left: 500px;
+}
+
 .survey-form-items {
   position: relative;
 }
